# attention-approximation

./: .gitignore  Makefile  README.md  demorun.sh  dvc.yaml  leorun.sh  main.py  pyproject.toml  train_multi_gpu.sh
attention-approximation/: attention_approximated_llm.py  modeling_llama.py
attention_approximation/: base.py  data.py  evaluation.py  modeling_llama.py  modeling_llama_approximated.py  modeling_llama_approximated_1.py  pytorch.py  trackers.py  utils.py
config/: distill-whole.yml  distll-layers.yml
notebooks/: download-dataset.ipynb  eval.ipynb  mobile-llm.ipynb  tensor-factorization.ipynb  test-model.ipynb
notebooks/results/: arc_challenge.json  arc_easy.json  benchmarks.md  piqa.json  winogrande.json
scripts/: benchmark.py  data_prepare.py  dataset_hf_to_bin.py  distill_individual_layers.py  distill_individual_layers_1.py  distill_unpach_model.py  distill_whole_model.py  eval_benchmarks.py  evaluate.py  generate.py  inference.py  inspect_ckpt.py  model_test_across_batch_dim.py  model_test_single_batch_overfit.py  test_dataset.py  train.py  train_layers.py  train_layers2.py
