[project]
name = "attention-approximation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ameda"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "N", "UP", "B", "C90", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]
